--- a/QRScanner/Base.lproj/Main.storyboard
+++ b/QRScanner/Base.lproj/Main.storyboard
@@ -30,6 +30,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgM-Rh-jv2">
+                                <rect key="frame" x="143" y="469" width="89" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Scan Again"/>
+                                <connections>
+                                    <action selector="scanAgain:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F1c-rn-9S9"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.31372549020000001" green="0.70980392160000005" blue="0.4823529412" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
